--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ spring.profiles.active=prod
 
 # jdbc\u914D\u7F6E
 spring.datasource.username=root
-spring.datasource.password=123123123
+spring.datasource.password=asdasdasd
 spring.datasource.url=jdbc:mysql://localhost:3306/crm?characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 
 
