基本完成系统功能-V0.9

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,6 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/crm?characterEncoding=UTF-8&us
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # \u5173\u95EDthymeleaf\u7684\u7F13\u5B58(\u70ED\u90E8\u7F72)
+spring.devtools.restart.enabled=false
 spring.thymeleaf.cache=false
 # \u677E\u6821\u9A8C
 spring.thymeleaf.mode=LEGACYHTML5
