--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # \u5173\u95EDthymeleaf\u7684\u7F13\u5B58(\u70ED\u90E8\u7F72)
+spring.devtools.restart.enabled=false
 spring.thymeleaf.cache=false
 # \u677E\u6821\u9A8C
 spring.thymeleaf.mode=LEGACYHTML5
