--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -32,10 +33,17 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.2</version>
         </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -61,15 +69,28 @@
             <version>3.9.1</version>
         </dependency>
 
-
-
-
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.github.fommil.netlib/all &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.fommil.netlib</groupId>-->
+<!--            <artifactId>all</artifactId>-->
+<!--            <version>1.1.2</version>-->
+<!--            <type>pom</type>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.github.fommil.netlib/netlib-native_system-osx-x86_64 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.fommil.netlib</groupId>-->
+<!--            <artifactId>netlib-native_system-osx-x86_64</artifactId>-->
+<!--            <version>1.1</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.github.fommil.netlib/netlib-native_system-win-x86_64 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
+            <groupId>com.github.fommil.netlib</groupId>
+            <artifactId>netlib-native_system-win-x86_64</artifactId>
+            <version>1.1</version>
         </dependency>
+
+
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
