--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,11 @@
 <!--            <version>1.1</version>-->
 <!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/com.github.fommil.netlib/netlib-native_system-win-x86_64 -->
-        <dependency>
-            <groupId>com.github.fommil.netlib</groupId>
-            <artifactId>netlib-native_system-win-x86_64</artifactId>
-            <version>1.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.fommil.netlib</groupId>-->
+<!--            <artifactId>netlib-native_system-win-x86_64</artifactId>-->
+<!--            <version>1.1</version>-->
+<!--        </dependency>-->
 
 
 
