--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=asdasdasd
 spring.datasource.url=jdbc:mysql://localhost:3306/crm?characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 
+# dataset \u8DEF\u5F84
+data_set_path=D:/Code_Learning/crm/target/classes/data_set/
 
 # mybatis\u914D\u7F6E
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
@@ -15,3 +17,8 @@ spring.devtools.restart.enabled=false
 spring.thymeleaf.cache=false
 # \u677E\u6821\u9A8C
 spring.thymeleaf.mode=LEGACYHTML5
+
+## \u7F16\u7801\u8BBE\u7F6E
+#spring.http.encoding.charset=UTF-8
+#spring.http.encoding.force=true
+#spring.http.encoding.enabled=true
